Add basic html and make operator function work.
end

--- a/index.html
+++ b/index.html
@@ -2,11 +2,35 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>New Project</title>
+        <title>Calculator</title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
     </head>
     <body>
-
+        <div class="display">
+            <div class="previous">Previous Total</div>
+            <div class="current">Current Total</div>
+        </div>
+        <div class="container">
+            <div class="numbers">
+                <button class="1">1</button>
+                <button class="2">2</button>
+                <button class="3">3</button>
+                <button class="4">4</button>
+                <button class="5">5</button>
+                <button class="6">6</button>
+                <button class="7">7</button>
+                <button class="8">8</button>
+                <button class="9">9</button>
+                <button class="10">0</button>
+            </div>
+            <div class='operators'>
+                <button class="plus">+</button>
+                <button class="minus">-</button>
+                <button class="mult">x</button>
+                <button class="div">÷</button>
+                <button class="equals">=</button>
+            </div>
+        </div>
     </body>
 </html>
