--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <div class="display">
-            <div class="previous">Previous Total</div>
-            <div class="current">Current Total</div>
-        </div>
-        <div class="container">
-            <div class="numbers">
-                <button class="1">1</button>
-                <button class="2">2</button>
-                <button class="3">3</button>
-                <button class="4">4</button>
-                <button class="5">5</button>
-                <button class="6">6</button>
-                <button class="7">7</button>
-                <button class="8">8</button>
-                <button class="9">9</button>
-                <button class="10">0</button>
+        <div class="calc">
+            <div class="display">
+                <div id="previous"></div>
+                <div id="current">0</div>
             </div>
-            <div class='operators'>
-                <button class="plus">+</button>
-                <button class="minus">-</button>
-                <button class="mult">x</button>
-                <button class="div">÷</button>
-                <button class="equals">=</button>
+            <div class="container">
+                <div class="numbers">
+                    <button class="num" value="1">1</button>
+                    <button class="num" value="2">2</button>
+                    <button class="num" value="3">3</button>
+                    <button class="num" value="4">4</button>
+                    <button class="num" value="5">5</button>
+                    <button class="num" value="6">6</button>
+                    <button class="num" value="7">7</button>
+                    <button class="num" value="8">8</button>
+                    <button class="num" value="9">9</button>
+                    <button class="num" value="0">0</button>
+                    <button class="clear">clear</button>
+                </div>
+                <div class='operators'>
+                    <button class="op" value="+">+</button>
+                    <button class="op" value="-">-</button>
+                    <button class="op" value="*">x</button>
+                    <button class="op" value ="/">÷</button>
+                    <button class="equals">=</button>
+                </div>
             </div>
         </div>
     </body>
