Edit calc size and add negative operator.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <button class="clear">clear</button>
                 </div>
                 <div class='operators'>
+                    <button class="neg">+/-</button>
                     <button class="op" value="+">+</button>
                     <button class="op" value="-">-</button>
                     <button class="op" value="*">x</button>
