Activate decimal point, remove control, and restyle.

--- a/index.html
+++ b/index.html
@@ -12,27 +12,31 @@
                 <div id="previous"></div>
                 <div id="current">0</div>
             </div>
+            <div class="del">
+                <button class="back" data-key="8">Back</button>
+                <button class="clear" data-key="46">Clear</button>
+            </div>
             <div class="container">
                 <div class="numbers">
-                    <button class="num" value="1">1</button>
-                    <button class="num" value="2">2</button>
-                    <button class="num" value="3">3</button>
-                    <button class="num" value="4">4</button>
-                    <button class="num" value="5">5</button>
-                    <button class="num" value="6">6</button>
-                    <button class="num" value="7">7</button>
-                    <button class="num" value="8">8</button>
-                    <button class="num" value="9">9</button>
-                    <button class="num" value="0">0</button>
-                    <button class="clear">clear</button>
+                    <button class="num" value="1" data-key="49">1</button>
+                    <button class="num" value="2" data-key="50">2</button>
+                    <button class="num" value="3" data-key="51">3</button>
+                    <button class="num" value="4" data-key="52">4</button>
+                    <button class="num" value="5" data-key="53">5</button>
+                    <button class="num" value="6" data-key="54">6</button>
+                    <button class="num" value="7" data-key="55">7</button>
+                    <button class="num" value="8" data-key="56">8</button>
+                    <button class="num" value="9" data-key="57">9</button>
+                    <button class="num zero" value="0" data-key="48">0</button>
+                    <button class="dec" value ="." data-key="190">.</button>
                 </div>
                 <div class='operators'>
-                    <button class="neg">+/-</button>
-                    <button class="op" value="+">+</button>
-                    <button class="op" value="-">-</button>
-                    <button class="op" value="*">x</button>
-                    <button class="op" value ="/">÷</button>
-                    <button class="equals">=</button>
+                    <button class="neg" data-key="78">+/-</button>
+                    <button class="op" value="+" data-key="107">+</button>
+                    <button class="op" value="-" data-key="109">-</button>
+                    <button class="op" value="*" data-key="106">x</button>
+                    <button class="op" value ="/" data-key="191">÷</button>
+                    <button class="equals" data-key="61">=</button>
                 </div>
             </div>
         </div>
